<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragment.FavoritesFragment"
    android:paddingTop="?attr/actionBarSize"
    android:paddingBottom="54dp"
    android:visibility="invisible">

    <!-- ITEM LIST -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- NO FAVORITES LAYOUT -->

    <androidx.constraintlayout.widget.Group
        android:id="@+id/noFavoritesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="noFavoritesImage,noFavoritesTitle,noFavoritesMessage" />

    <ImageView
        android:id="@+id/noFavoritesImage"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/ic_favorite_border_black_24dp"
        android:alpha="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/noFavoritesTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:contentDescription="@string/favorites_noFavoritesContentDescription"/>

    <TextView
        android:id="@+id/noFavoritesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites_noFavoritesTitle"
        android:textColor="@color/primaryTextLight"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/noFavoritesMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noFavoritesImage"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/noFavoritesMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites_noFavoritesMessage"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/noFavoritesTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>